PF-635: relax creation parameters requirements for buckets (#333)